--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,6 +8,10 @@ body {
   color: lightgreen;
 }
 
+.text-yellow {
+  color: yellow;
+}
+
 .project-card {
   background-color: #444;
   padding: 4px;
