--- a/static/css/main.css
+++ b/static/css/main.css
@@ -22,3 +22,21 @@ body {
   margin: 2px;
   border-radius: 5px;
 }
+
+.popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #111;
+  border: none;
+  z-index: 1000;
+}
+
+.popup iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
